<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/_15dp"
    android:orientation="horizontal"
    android:background="@color/color_ff"
    android:gravity="center_vertical">

    <ImageView
        android:layout_width="@dimen/_45dp"
        android:layout_height="@dimen/_45dp"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="@null"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/_15dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/str_bbgx"
                android:textColor="@color/color_33"
                android:textSize="@dimen/_14sp"/>

            <TextView
                android:id="@+id/tv_download_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="下载进度：50%"
                android:textColor="@color/color_66"
                android:textSize="@dimen/_14sp"/>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_marginTop="@dimen/_10dp"/>
    </LinearLayout>

    <TextView
        android:visibility="gone"
        android:id="@+id/tv_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/color_ff"
        android:text="@string/str_ztxz"
        android:layout_marginStart="@dimen/_10dp"
        android:background="@drawable/shape_108_5dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:paddingStart="@dimen/_10dp"
        android:paddingEnd="@dimen/_10dp"/>

    <TextView
        android:id="@+id/tv_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/color_ff"
        android:text="@string/str_jxxz"
        android:layout_marginStart="@dimen/_10dp"
        android:background="@drawable/shape_108_5dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:paddingStart="@dimen/_10dp"
        android:paddingEnd="@dimen/_10dp"
        android:visibility="gone"/>
</LinearLayout>